# GraphOps

./: CMakeLists.txt  GraphEditor.sln  README.md
GraphEditor/: FileReader.cpp  FileReader.h  Graph.cpp  GraphEditor.cpp  GraphEditor.vcxproj  GraphEditor.vcxproj.filters  GraphNode.cpp  GraphNode.h  MainGraph.h  graph.txt
GraphEditor/x64/Debug/: GraphEditor.exe.recipe
GraphEditor/x64/Debug/GraphEditor.tlog/: CL.command.1.tlog  Cl.items.tlog  GraphEditor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
